--- a/src/app/Login/Login.component.html
+++ b/src/app/Login/Login.component.html
@@ -1,4 +1,7 @@
 <app-nav-bar></app-nav-bar>
+
+<div class="count">
+<div class="form-group">
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <div class="form-group" style="font-weight: bold">
@@ -20,33 +23,37 @@
     <a [routerLink]="['/register']" class="btn btn-link">Register</a>
   </div>
 </form>
+</div>
+</div>
 
+<!--<html>-->
+ <!--<head>-->
+   <!--<title> Login </title>-->
+   <!--<link rel="stylesheet" type="text/css" href="Login.component.css">-->
 
+ <!--</head>-->
+  <!--<body>-->
+<!--<div class="count">-->
+    <!--<form>-->
 
+      <!--<div class="inuser">-->
+        <!--<div class="divImg">-->
+          <!--<img  id="imguser" src="">-->
+        <!--</div>-->
 
+        <!--<div class="divImg">-->
+          <!--<img  id="imguser1" src="">-->
+        <!--</div>-->
 
+      <!--</div>-->
 
-<!--<h2>Login</h2>-->
-<!--<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">-->
-<!--<div class="form-group">-->
-<!--<label for="userName">Username</label>-->
-<!--<input  id="userName" type="text" formControlName="userName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.userName.errors }" />-->
-<!--<div *ngIf="submitted && f.userName.errors" class="invalid-feedback">-->
-<!--<div *ngIf="f.userName.errors.required">Username is required</div>-->
+        <!--<div class="inuser">-->
+          <!--<input type="text" placeholder="username">-->
+          <!--<input type="password" placeholder="password">-->
+        <!--</div>-->
+         <!--<button id="btnLogin"> login</button>-->
+    <!--</form>-->
 <!--</div>-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<label for="password">Password</label>-->
-<!--<input id="password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />-->
-<!--<div *ngIf="submitted && f.password.errors" class="invalid-feedback">-->
-<!--<div *ngIf="f.password.errors.required">Password is required</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<button class="btn btn-primary">Login</button>-->
-<!--</div>-->
-<!--<div *ngIf="error" class="alert alert-danger">{{error}}</div>-->
-<!--</form>-->
-
-
+  <!--</body>-->
+<!--</html>-->
 
