add filter component

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -7,9 +7,8 @@
     <li class="list-group-item"> Email : {{user.email}}</li>
     <li class="list-group-item"> Mobile Number : {{user.mobileNumber}}</li>
     <li class="list-group-item"> Gender : {{user.gender}}</li>
-
     <td>
-      <button [routerLink]="['/user', user.users_id]" class="btn btn-sample"style="margin-right: 10px">Edit</button>
+      <button [routerLink]="['/user', user.usersid]" class="btn btn-sample" style="margin-right: 10px">Edit</button>
 
     </td>
   </ul>
