--- a/src/app/Login/Login.component.html
+++ b/src/app/Login/Login.component.html
@@ -19,6 +19,7 @@
     </div>
   </div>
   <div class="form-group">
+    <div  style="color: red" *ngIf="error"> {{error}}</div>
     <button [disabled]="loading" class="btn btn-sample">Login</button>
     <a [routerLink]="['/register']" class="btn btn-link">Register</a>
   </div>
