--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,8 @@
 <app-nav-bar></app-nav-bar>
 <br> <br>
-<div  style="background-color:#aeaeae">
-  <h3 style="color:black;text-align:center" >Welcom to the Event Website  </h3>
-</div><br> <br>
-
-<div>
-  <a href="https://angular.io">Visit Angular.io!</a>
-
-</div>
-
-
+  <div style="background-color:#ecdbff;height:650px" ><br>
+    <h1 style="color:black;text-align:center">Welcom to the Event Website  </h1>
+  </div><br> <br>
+  <div>
+    <a href="https://angular.io">Visit Angular.io!</a>
+  </div>
